[gd_scene load_steps=10 format=3 uid="uid://dan05mcwth3fl"]

[ext_resource type="Script" path="res://Scenes/wood_tree.gd" id="1_fgxme"]
[ext_resource type="Texture2D" uid="uid://cuqy5qr63yvmm" path="res://Resources/survivalgame-appletree.png" id="2_8d4s2"]
[ext_resource type="Texture2D" uid="uid://dcy708sy7d4m4" path="res://Arts/Resources/Arrow.png" id="3_6vrhk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k7obk"]
atlas = ExtResource("2_8d4s2")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ltr"]
atlas = ExtResource("2_8d4s2")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_lx7sq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7obk")
}],
"loop": true,
"name": &"stub",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ltr")
}],
"loop": true,
"name": &"tree",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k6t3i"]
radius = 28.0

[sub_resource type="Animation" id="Animation_77xjj"]
resource_name = "arrow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-4, -34), Vector2(-4, -28), Vector2(-4, -34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wphpj"]
_data = {
"arrow": SubResource("Animation_77xjj")
}

[node name="wood_tree" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fgxme")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lx7sq")
animation = &"tree"
autoplay = "stub"

[node name="PickableArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableArea"]
shape = SubResource("CircleShape2D_k6t3i")

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-3, 15, -7, 10, -5, 5, 5, 5, 7, 10, 5, 14, 4, 15)

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
offset_left = -4.0
offset_top = -29.0283
offset_right = 5.0
offset_bottom = -17.0283
texture = ExtResource("3_6vrhk")
expand_mode = 1

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_wphpj")
}
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_wphpj")
}
autoplay = "arrow"

[connection signal="body_entered" from="PickableArea" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="PickableArea" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
